RESOLVED FIXED90718
[EFL] Fix build break when Accelerated Compositing is on
https://bugs.webkit.org/show_bug.cgi?id=90718
Summary [EFL] Fix build break when Accelerated Compositing is on
Jinwoo Song
Reported 2012-07-06 22:41:06 PDT
ewk_view_accelerated_compositing_XXX APIs are in ewk_view_private.h
Attachments
patch (2.56 KB, patch)
2012-07-06 22:44 PDT, Jinwoo Song
no flags
patch (2.55 KB, patch)
2012-07-06 23:25 PDT, Jinwoo Song
no flags
Jinwoo Song
Comment 1 2012-07-06 22:44:21 PDT
Jinwoo Song
Comment 2 2012-07-06 23:25:18 PDT
Ryuan Choi
Comment 3 2012-07-07 07:05:13 PDT
Comment on attachment 151134 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=151134&action=review > Source/WebKit/efl/ChangeLog:8 > + ewk_view_accelerated_compositing_XXX APIs are in ewk_view_private.h This comment is partially commented the reason. Unreviewed build fix looks enough or you'd better to explain all of your changes. For your information, ewk_view_accelerated_compositing_XXX APIs are moved to ewk_view_private.h after r117046. And PageClientEfl is moved out of WebCore namespace after r114367 to fix build break of WebKit2.
WebKit Review Bot
Comment 4 2012-07-07 18:03:10 PDT
Comment on attachment 151134 [details] patch Clearing flags on attachment: 151134 Committed r122057: <http://trac.webkit.org/changeset/122057>
WebKit Review Bot
Comment 5 2012-07-07 18:03:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.