[EFL] Fix build break when Accelerated Compositing is on. https://bugs.webkit.org/show_bug.cgi?id=90718

Unreviewed build fix.

ewk_view_accelerated_compositing_XXX APIs are in ewk_view_private.h

Patch by Jinwoo Song <jinwoo7.song@samsung.com> on 2012-07-07

* WebCoreSupport/PageClientEfl.cpp:
(PageClientEfl::createEvasObjectForAcceleratedCompositing):
(PageClientEfl::acceleratedCompositingContext):
* WebCoreSupport/PageClientEfl.h:
(PageClientEfl):

Canonical link: https://commits.webkit.org/108569@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122057 268f45cc-cd09-0410-ab3c-d52691b4dbfc